Fixed bug #33312 (ReflectionParameter methods do not work correctly)